chore: Remove unnecesary qs and crypto-js packages from override (#4637)
* chore: Remove unnecesary qs package

* chore: Remove unnecesary qs package

--- a/package.json
+++ b/package.json
@@ -145,11 +145,7 @@
     "*.{ts,tsx,js,jsx,json,html,css,scss,yaml,md}": "prettier --write"
   },
   "overrides": {
-    "oidc-client-ts": {
-      "crypto-js": "4.2.0"
-    },
     "d3-color": "^3.1.0",
-    "prismjs": "1.30.0",
-    "qs": "^6.14.1"
+    "prismjs": "1.30.0"
   }
 }
